--- a/css/styles.css
+++ b/css/styles.css
@@ -13,13 +13,46 @@
     --botom-contact-color: #FFFFFF99;
 }
 
+* {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+}
+
+h1,
+h2,
+h3,
+p {
+        margin: 0px;
+}   
+
 body{
         font-family: var(--main-font-family);
         color: var(--primary-text-color);
         background-color: var(--primary-bg-color);
+        font-size: 14px;
+}
+
+section {
+        padding-top: 94px;
+        padding-bottom: 94px;
 }
 a {
         text-decoration: none;
+        margin: 0px;
+}
+
+img {
+        display: block;
+        max-width: 100%;
+        height: auto;
+}
+
+.container {
+        padding: 0 15px;
+        width: 1200px;
+        max-width: 100%;
+        margin: 0 auto;
 }
 
 .web {
@@ -39,24 +72,44 @@ a {
         line-height: 1.38;
         letter-spacing: 0.03em;
         color:var(--logo-web-color-2);
+        margin-top: 24px;
 }
 
+.site-nav {
+        display: flex;
+        list-style-type: none;
+        justify-content: space-evenly;
+        gap: 93px;
+        border-bottom: 1px solid #ECECEC;
+}
+.site-link{
+        display: flex;
+        list-style-type: none;
+        gap: 46px;
+        padding-top: 32px;
+        padding-bottom: 32px;
+}
 .contact-links {
         list-style: none;
 }
 .nav-link {
         text-decoration: none;
+        justify-content: flex-end;
         font-weight: 500;
         font-size: 14px;
         line-height: 1.14;
         letter-spacing: 0.02em;
         color: var(--primary-text-color);
 }
-.nav-link:hover {
+.nav-link:hover,
+.nav-link:focus,
+.nav-link:active {
         color: var(--logo-web-color);
 }
+
 .big-header{
         background-color: var(--footer-bg-color);
+        justify-content: center;
 }
 .big-title {
         font-weight: 900;
@@ -64,14 +117,35 @@ a {
         line-height: 1.4;
         letter-spacing: 0.06em;
         color: var(--primary-bg-color);
+        text-align: center;
+        text-transform: uppercase;
+        width: 696px;
+        margin: 46px auto;
+        padding-bottom: 10px;
 }
 .button-menu {
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 1.87;
-        letter-spacing: 0.06em;
-        color:var(--primary-bg-color);
+        color: var(--primary-bg-color);
         background-color: var(--logo-web-color);
+        font-weight: 700;
+        line-height: 1.87;
+        font-size: 16px;
+        width: 200px;
+        letter-spacing: 0.06em;
+        border: none;
+        border-radius: 4px;
+        padding: 10px 0;
+        margin: 0 500px 106px 500px;
+        justify-content: center;
+}
+
+.our-section-list-list {
+        display: flex;
+        margin: 0px;
+        justify-content: space-between;
+        gap: 30px;
+        word-wrap: normal;
+        flex-flow: wrap;
+        padding-bottom: 94px;
 }
 .our-section-list {
         list-style: none;
@@ -80,13 +154,23 @@ a {
         line-height: 1.17;
         letter-spacing: 0.03em;
         color: var(--primary-text-color);
+        margin-bottom: 10px;
+        flex-flow: wrap;
 }
+.our-section-title {
+        text-transform: uppercase;
+        margin-bottom: 10px;
+        flex-flow: wrap;
+}
+
 .our-section-description {
         font-weight: 400;
         font-size: 14px;
         line-height: 1.7;
         letter-spacing: 0.03em;
         color: var(--title-text-color);
+        line-height: 1.71;
+        width: 270px;
 }
 .third-header{
         background-color: var(--main-bg-color);
@@ -97,7 +181,18 @@ a {
         line-height: 1.17;
         letter-spacing: 0.03em;
         color: var(--primary-text-color);
+        text-align: center;
+        margin-bottom: 50px;
 }
+
+.main-images {
+        list-style: none;
+        display: flex;
+        justify-content: center;
+        padding-left: 0px;
+        gap: 30px;
+}
+
 .team-name {
         font-weight: 500;
         font-size: 16px;
@@ -107,13 +202,48 @@ a {
         background-color: var(--primary-bg-color);
 }
 
-.main-images,
-.main-images-images,
-.team-images,
+
 .set-buttons,
-.button,
+.button {
+        list-style: none;
+        display: flex;
+        justify-content: center;
+        gap: 8px;
+        padding-bottom: 50px;
+}
 .card-set-photo {
         list-style: none;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+        padding: 0;
+        margin: 0 auto;
+}
+
+.client-name{
+        font-weight: 700;
+        letter-spacing: 0.06em;
+        padding: 20px 0 4px 24px;
+        line-height: 2em;
+}
+
+.client-service {
+        line-height: 1.875em;
+        padding: 0 0 20px 24px;
+        color: var(--title-text-color);
+}
+
+.team-images {
+        list-style: none;
+        display: inline-flex;
+        justify-content: space-around;
+        width: 100%;
+        gap: 30px;
+}
+.team-name{
+        text-align: center;
+        padding-top: 30px;
+        padding-bottom: 10px;
 }
 .team-position {
         font-weight: 400;
@@ -122,6 +252,9 @@ a {
         letter-spacing: 0.03em;
         color: var(--title-text-color);
         background-color: var(--primary-bg-color);
+        max-width: 100%;
+        text-align: center;
+        padding-bottom: 30px;
 }
 .bottom {
         background-color: var(--footer-bg-color);
@@ -146,6 +279,18 @@ a {
         letter-spacing: 0.03em;
         color: var(--primary-bg-color);
 }
+.bottom-contact-link:not(:first-child) {
+        padding-bottom: 9px;
+}
+
+.bottom-contact-link:nth-child(1) {
+        padding-bottom: 20px;
+}
+
+.bottom {
+        padding: 60px 0px 60px 15px;
+}
+
 .bottom-contact-link {
         list-style: none;
         text-decoration: none;
@@ -163,6 +308,7 @@ a {
         letter-spacing: 0.03em;
         color: var(--botom-contact-color);
 }
+
 .buttons {
         font-style: normal;
         font-weight: 500;
@@ -174,6 +320,7 @@ a {
         background-color: var(--buttons-color);
         border-radius: 4px;
         border: none;
+        padding: 6px 22px;
 }
 .buttons:hover,
 .butons:focus {
